--- a/mytheme/templates/includes/twitter_cards.html
+++ b/mytheme/templates/includes/twitter_cards.html
@@ -8,6 +8,14 @@
     {% endif %}
     <meta name="twitter:domain" content="{{ SITEURL }}">
     {% if article %}
+        {% if article.title %}
+            <meta property="twitter:title"
+                  content="{{ SITEURL }}/{{ article.title }}"/>
+        {% endif %}
+        {% if article.summary %}
+            <meta property="twitter:description"
+                  content="{{ SITEURL }}/{{ article.summary }}"/>
+        {% endif %}
         {% if article.og_image %}
             <meta property="twitter:image"
                   content="{{ SITEURL }}/{{ article.og_image }}"/>
